deixando o código menor

--- a/desafios/d003/index.html
+++ b/desafios/d003/index.html
@@ -18,12 +18,7 @@
     <script>
         function inicio(params) {
             let numero = Number(window.prompt('Digite um número: '))
-            let n1 = numero
-            let n2 = numero
-            let ante = --numero
-            let sus = ++n2
-            window.alert(` Antes de ${n1}, temos o número ${ante}.
-Depois de ${n1}, temos o número ${n2}.`)
+            window.alert(`Antes de ${numero}, temos o número ${--numero}.Depois de ${++numero}, temos o número ${++numero}.`)
         }
     </script>
 </body>
