--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -19,7 +19,8 @@
     <p>Aprendendo usar <strong>DOM</strong> em <strong>JavaScript</strong>.</p>
     <button>Clique em mim</button>
     <script>
-        
+        var p1 = document.getElementsByTagName('p')[0]
+        window.document.write()
     </script>
 </body>
 </html>
