--- a/exercicios/ex010/index.html
+++ b/exercicios/ex010/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detran</title>
+
 </head>
 <body>
     <h1>Sistema de multa</h1>
-    <p>A velocidade do carro<input type="number" name="txtvel" id="txtvel"></p>
-    <input type="button" value="verificar">
+    <p>A velocidade do carro: <input type="number" name="txtvel" id="txtvel"> Km/h</p>
+    <input type="button" value="verificar" onclick="calcular()" class="botao">
+    <section id="res">
+        
+    </section>
+    <script>
+        function calcular() {
+            var txtv = window.document.querySelector('input#txtvel')
+            var res = document.querySelector('section#res')
+            var vel = Number(txtv.value)
+            res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel} Km/h</strong>.</p>`
+            if (vel > 60) {
+                res.innerHTML += '<p>Você está <strong>MULTADO</strong> por execesso de velocidade.</p>'
+            }
+            res.innerHTML += `<p>Dirija sempre com cinto de segurança!</p>`
+        }
+    </script>
 </body>
 </html>
