--- a/exercicios/ex014/index.html
+++ b/exercicios/ex014/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Titulo</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>testando</div>
-        <div>testando</div>
+        <article id="msg">
+            Aqui vai aparecer a hora
+        </article>
+        <figure id="foto">
+            <img id="imagem" src="imagens/manha.png" alt="manhã">
+        </figure>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
