--- a/exercicios/ex019/index.html
+++ b/exercicios/ex019/index.html
@@ -14,12 +14,12 @@
     <section>
         <div>
             <p>
-                Numero: <input type="number" name="txtn" id="txtNumber">
-                <button onclick="comeco()">Gerar Tabuada</button>
+                Numero: <input type="number" name="txtn" id="txtn">
+                <button onclick="start()">Gerar Tabuada</button>
             <p>
         </div>
-        <div id="res">
-
+        <div>
+            <select name="tabuada" id="seltab" size="10"></select>
         </div>
     </section>
     <footer>
